--- a/public/main.html
+++ b/public/main.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GEMS Academy</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+    <div class="navbar">
+        <ul class="links">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="classes.html">Classes</a></li>
+            <!-- <nav>
+                <a href="#" onclick="loadContent('page1.html')">Page 1</a> |
+                <a href="#" onclick="loadContent('page2.html')">Page 2</a>
+            </nav> -->
+            <li><a href="igem.html">iGEM</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <a href="#" class="action_button">Contact Us</a>
+        <div class="toggle_button"></div>
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    
+</body>
+</html>
