--- a/public/main.html
+++ b/public/main.html
@@ -6,23 +6,23 @@
     <title>GEMS Academy</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <div class="navbar">
-        <ul class="links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="classes.html">Classes</a></li>
-            <!-- <nav>
-                <a href="#" onclick="loadContent('page1.html')">Page 1</a> |
-                <a href="#" onclick="loadContent('page2.html')">Page 2</a>
-            </nav> -->
-            <li><a href="igem.html">iGEM</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <a href="#" class="action_button">Contact Us</a>
-        <div class="toggle_button"></div>
-        <i class="fa-solid fa-bars"></i>
-    </div>
+<body>  
+    <header>
+        <div class="navbar">
+            <img src="images/logo.jpg">
+            <ul class="links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="igem.html">iGEM</a></li>
+                <li><a href="features.html">Features</a></li>
+                <li><a href="contributions.html">Contributions</a></li>
+            </ul>
+            <button>Contact Us!</button>
+            <div class="toggle_button"></div>
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </header>
+    <h1> test </h1>
     
 </body>
 </html>
